# mega_gpu

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cufile_api.cc  cufile_api.h  env.sh  real_api.h  simple_lib.cc  simple_lib.h  test_basic.cc  test_cufile_isa.cc  test_cufile_shazzadul.cc  test_cufile_shazzadul.cc.save  test_cufile_shazzadul.cc.save.1  test_cufile_shazzadul2.cc  vector_add.cc  vector_add.cpp
cuda/: CMakeLists.txt  cufile_api.cc  cufile_api.h  real_api.h  test_cufile_isa.cc  test_cufile_shazzadul.cc
cuda/shared/: CMakeLists.txt  so_test.cc  so_test.h  so_test_.h  test_shared.cc
cuda/shared2/: CMakeLists.txt  README.md  so_test.h  so_test_.h  test_shared.cc
cuda/shared_sym/: so_test.cc  so_test.h  test_shared.cc
issue1/: script  vectAddition.cu
rocm/: CMakeLists.txt  test_lib.cc  test_lib.h  test_lib_main.cc
rocm/compile_host/: CMakeLists.txt  mycommon.h  test_lib.cc  test_lib.h  test_lib2.cc  test_lib2.h  test_lib_main.cc
rocm/compile_host_device/: CMakeLists.txt  test_lib.cc  test_lib.h  test_lib2.cc  test_lib2.h  test_lib_main.cc
